targeet fix overflow

--- a/packages/assets/scss/00-base/_elements.scss
+++ b/packages/assets/scss/00-base/_elements.scss
@@ -32,7 +32,6 @@ html {
 
 body {
   width: 100vw;
-  overflow-x: hidden;
   margin: 0;
   font-size: $fonts-medium; //16px
   line-height: 1.6;
