--- a/packages/assets/scss/03-organisms/_header-hamburger.scss
+++ b/packages/assets/scss/03-organisms/_header-hamburger.scss
@@ -14,7 +14,7 @@ body.show-menu {
 
 .alert-overlay {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s 0.6s, opacity 0.6s linear;
@@ -31,7 +31,7 @@ body.show-menu {
 
 .menu-overlay {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   visibility: hidden;
   opacity: 0;
